Add body content
2 images enclosed within span elements. Span elements have 'lightbox' class that will be used by JavaScript and CSS to control the presentation of the inner image. Photo1/2 are placeholders for unique images using the elements 'src' attribute.

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 <script src="js/code.js"></script>
 </head>
 <body>
+  <span class="lightbox"><img src="img/photo1.jpg" /></span>
+  <span class="lightbox"><img src="img/photo2.jpg" /></span>
 </body>
 </html>
